--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,6 @@
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/progress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +56,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/sf_ui_text_light"
         android:gravity="center"
-        android:text="Jobs not found"
+        android:text="@string/jobs_not_found"
         android:textSize="@dimen/dimen_24sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
