--- a/app/src/main/res/layout/item_highest_paid.xml
+++ b/app/src/main/res/layout/item_highest_paid.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="@dimen/dimen_16dp"
-    android:layout_marginStart="@dimen/dimen_16dp"
+    android:layout_marginStart="@dimen/dimen_8dp"
     android:layout_marginTop="@dimen/dimen_8dp"
+    android:layout_marginEnd="@dimen/dimen_8dp"
     android:background="@drawable/background_card_border_white"
     android:elevation="@dimen/dimen_4dp"
     android:orientation="vertical">
@@ -18,40 +17,42 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/sf_ui_text_light"
         android:text="@string/highest_salary"
         android:textAlignment="viewStart"
         android:textColor="#605751"
         android:textSize="@dimen/dimen_12sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tag" />
+
 
     <TextView
         android:id="@+id/textViewDeviation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/sf_ui_text_light"
         android:text="@string/highest_deviation"
-        android:textAlignment="textEnd"
+        android:textAlignment="textStart"
         android:textColor="#605751"
         android:textSize="@dimen/dimen_12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textViewSalary"
-        app:layout_constraintTop_toBottomOf="@+id/tag" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSalary" />
 
     <TextView
         android:id="@+id/textViewAmount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/sf_ui_text_light"
         android:text="@string/highest_amout"
         android:textAlignment="viewStart"
@@ -59,27 +60,26 @@
         android:textSize="@dimen/dimen_12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSalary"
+        app:layout_constraintTop_toBottomOf="@+id/textViewDeviation"
         app:layout_constraintVertical_bias="0.0" />
 
-
-    <Button
+    <com.pchmn.materialchips.ChipView
         android:id="@+id/tag"
         android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_marginEnd="8dp"
+        android:layout_height="@dimen/dimen_48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/border_button"
-        android:fontFamily="@font/sf_ui_text_light"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold"
+        android:layout_marginEnd="8dp"
+        app:backgroundColor="@color/color_accent"
+        app:deleteIconColor="@android:color/white"
+        app:hasAvatarIcon="true"
+        app:label="Java Script"
+        app:labelColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_flexGrow="1"
-        tools:text="Dev" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
