--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,9 @@
     <color name="color_primary_dark">#00574B</color>
     <color name="color_accent">#D81B60</color>
 
-    <color name="colorPrimary">#1C1C1C</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FF374A</color>
+    <color name="colorPrimary">#D81B60</color>
+    <color name="colorPrimaryDark">#D81B60</color>
+    <color name="colorAccent">#6C63FF</color>
     <color name="colorPrimaryText">#1C1C1C</color>
     <color name="green_175258">#175258</color>
     <color name="green_2bbc9b">#2BBC9B</color>
@@ -14,4 +14,5 @@
     <color name="white_f2feff">#F2FEFF</color>
     <color name="green_e6f9fa">#E6F9FA</color>
     <color name="black">#000000</color>
+    <color name="gray_ababab">#ababab</color>
 </resources>
