--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -19,9 +19,8 @@
         android:fontFamily="@font/pacifico"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/remote_jobs"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         android:textSize="58sp"
-        android:transitionName="textJobs"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
