--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -25,7 +25,7 @@
             android:src="@drawable/ic_launcher_web"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
             app:layout_constraintVertical_bias="0.0"
             app:round_radius="@dimen/dimen_8dp"
             app:shape_mode="round_rect" />
@@ -44,16 +44,15 @@
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Senior Full Stack Web Developer" />
 
         <TextView
             android:id="@+id/textViewDate"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|end"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
@@ -63,7 +62,6 @@
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textViewCompany"
             app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
             tools:text="2d" />
 
@@ -75,6 +73,7 @@
             android:layout_gravity="top|end"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/sf_ui_text_light"
             android:gravity="start"
@@ -82,6 +81,8 @@
             android:textColor="@color/gray_ababab"
             android:textSize="14sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/textViewDate"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
             app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
             tools:text="TRMA Mobile Solutions" />
@@ -98,17 +99,17 @@
             app:justifyContent="flex_start"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">
+            app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
+            app:layout_constraintTop_toBottomOf="@+id/textViewDate"
+            app:layout_constraintVertical_bias="0.0">
 
             <com.pchmn.materialchips.ChipView
                 android:id="@+id/tag1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_4dp"
+                android:layout_marginEnd="@dimen/dimen_4dp"
                 app:backgroundColor="@color/color_accent"
-                app:hasAvatarIcon="true"
-                app:label="Dev"
                 app:labelColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -119,12 +120,10 @@
                 android:id="@+id/tag2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_4dp"
                 android:layout_marginTop="@dimen/dimen_4dp"
+                android:layout_marginEnd="@dimen/dimen_4dp"
                 app:backgroundColor="@color/color_accent"
                 app:deleteIconColor="@android:color/white"
-                app:hasAvatarIcon="true"
-                app:label="Java Script"
                 app:labelColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -135,13 +134,10 @@
                 android:id="@+id/tag3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_4dp"
                 android:layout_marginTop="@dimen/dimen_4dp"
-                android:layout_marginEnd="@dimen/dimen_8dp"
+                android:layout_marginEnd="@dimen/dimen_4dp"
                 app:backgroundColor="@color/color_accent"
                 app:deleteIconColor="@android:color/white"
-                app:hasAvatarIcon="true"
-                app:label="Java"
                 app:labelColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
