--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".highestpaid.view.HighestPaidSelectActivity">
+    tools:context=".categories.view.CategoriesSelectActivity">
 
     <TextView
         android:layout_width="wrap_content"
